--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "codemirror": "^5.60.0",
     "idb-keyval": "^5.0.4",
+    "sortablejs": "^1.13.0",
     "vue": "^3.0.10",
     "vue-codemirror": "^4.0.6",
     "vue-prism-editor": "^1.2.2"
